--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -2,9 +2,23 @@
 {% block title %} MEOW {% endblock %}
 {% block content %}
     <div class="features">
-        <h1>Main page</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, tempore.</p>
+        <h1>{{ title }}</h1>
+        {% filter upper %}<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, tempore.</p> {% endfilter %}
         <button class="btn btn-warning">to our page</button>
+
+        {% for el in values %}
+            {% if el == 'Hello' %}
+                {% filter upper %}
+                <p>{{ el }}</p>
+                {% endfilter %}
+            {% endif %}
+        {% endfor %}
+
+        {{ obj.age }}
+
+        {% for el in obj %}
+                <p>{{ el|upper }}</p>
+        {% endfor %}
     </div>
 
     {% include 'main/test.html' %}
