--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -18,6 +18,7 @@
             <li><a href="{% url 'home' %}"><i class="fa-solid fa-bars"></i> Main</a></li>
             <li><a href="{% url 'about' %}"><i class="fa-solid fa-bars"></i> About us</a></li>
             <li><a href="{% url 'news_home' %}"><i class="fa-solid fa-bars"></i> News</a></li>
+            <li><a href="{% url 'create' %}"><i class="fa-solid fa-bars"></i> Add Article</a></li>
             <li><a href=""><i class="fa-solid fa-bars"></i> Contacts</a></li>
         </ul>
 
