--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,5 +1,5 @@
 {% extends 'main/layout.html' %}
-{% block title %} MEOW {% endblock %}
+{% block title %} News shit {% endblock %}
 {% block content %}
     <div class="features">
         <h1>{{ title }}</h1>
