--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -12,7 +12,7 @@
 <body>
     <aside>
         <img src="{% static 'main/img/meow.jpg' %}" alt="idk">
-        <span class="logo">Adil</span>
+        <span class="logo">Marticat</span>
         <h3>Navigation</h3>
         <ul>
             <li><a href="{% url 'home' %}"><i class="fa-solid fa-bars"></i> Main</a></li>
